# codemedic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
codemedic/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  database.py  explanations.py  fixer.py  formatter.py  report.py  runner.py  security.py  trace.py  utils.py
docs/: conf.py  index.rst
examples/: attribute_error.py  file_not_found.py  index_error.py  key_error.py  name_error.py  type_error.py  zero_division.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_config.py  test_database.py  test_explanations.py  test_fixer.py  test_report.py  test_runner.py  test_security.py  test_trace.py  test_utils.py
